--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,35 @@
-spring.datasource.url= jdbc:postgresql://localhost:5432/sbjwt
-spring.datasource.username= postgres
-spring.datasource.password= password
+#POSTGRESQL
+ spring.datasource.url= jdbc:postgresql://localhost:5432/sbjwt
+ spring.datasource.username= postgres
+ spring.datasource.password= P@ssw0rds3mp4kb4k4r
+ spring.datasource.driver-class-name=org.postgresql.Driver
+ spring.jpa.hibernate.ddl-auto= update
 
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
-spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQL9Dialect
+#MYSQL
+#  spring.datasource.url= jdbc:mysql://localhost:3306/sbjwt
+#  spring.datasource.username= root
+#  spring.datasource.password= P@ssw0rds3mp4kb4k4r
+#  spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#  spring.jpa.hibernate.ddl-auto= update
+
+#ORACLE
+#  spring.datasource.url= jdbc:oracle:thin:@localhost:1521/XEPDB1
+#  spring.datasource.username= system
+#  spring.datasource.password= P@ssw0rds3mp4kb4k4r
+#  spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+#  spring.jpa.hibernate.ddl-auto= create
+
+#error=true
+#logging.file.name=my.log
+
+
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+#spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.Oracle8iDialect
+
+
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto= update
+#spring.jpa.hibernate.ddl-auto= update
 
 # App Properties
 sbjwt.jwtSecret= sbjwt
